--- a/index.html
+++ b/index.html
@@ -4,3 +4,6 @@ Hello there, awesome person!
     Hello there, awesome person! 
   </body>
 </html>
+ <head>
+        <title>My wonderful web page</title>
+    </head>
