--- a/index.html
+++ b/index.html
@@ -10,3 +10,6 @@ Hello there, awesome person!
  <body>
     <h1>I'm a header 1!</h1>
  </body>
+ <body>
+   <img src="https://avatars1.githubusercontent.com/u/61977575?v=4">
+ </body>
