--- a/index.html
+++ b/index.html
@@ -13,3 +13,8 @@ Hello there, awesome person!
  <body>
    <img src="https://avatars1.githubusercontent.com/u/61977575?v=4">
  </body>
+ <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
