--- a/index.html
+++ b/index.html
@@ -19,3 +19,7 @@ Hello there, awesome person!
     <li>Ordered list</li>
 </ol>
 <li><a href="https://github.com">This is a link to GitHub!</a></li>
+<head>
+        <title>I am a title!</title>
+        <link rel="stylesheet" href="style.css">
+</head>
